--- a/effie/Cargo.toml
+++ b/effie/Cargo.toml
@@ -10,3 +10,5 @@ readme = "../README.md"
 [dependencies]
 bitflags = "2.4.2"
 uguid = "2.2.0"
+
+effie-macros = { version = "0.1.0", path = "../effie-macros" }
