--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,3 @@
 [unstable]
-build-std = ["core", "panic_abort"]
+build-std = ["core", "alloc", "panic_abort"]
 build-std-features = ["panic_immediate_abort"]
