--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ publish = false
 [dependencies]
 effie = { version = "0.1.0", path = "effie" }
 itoa = "1.0.11"
-linux-raw-sys = { git = "https://github.com/sunfishcode/linux-raw-sys.git", version = "0.6.4", default-features = false, features = [
+linux-raw-sys = { git = "https://github.com/morr0ne/linux-raw-sys.git", branch = "feature/arm-image-header", version = "0.6.4", default-features = false, features = [
     "no_std",
     "bootparam",
 ] }
