--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = ["effie", "effie-macros"]
 name = "bread"
 version = "0.1.0"
 edition = "2021"
-license = "MIT OR Apache-2.0"
+license = "Apache-2.0"
 authors = ["Federico Maria Morrone <contact@morrone.dev>"]
 repository = "https://github.com/morr0ne/bread"
 readme = "README.md"
