--- a/effie/Cargo.toml
+++ b/effie/Cargo.toml
@@ -10,5 +10,6 @@ readme = "../README.md"
 [dependencies]
 bitflags = "2.6.0"
 uguid = "2.2.0"
+itoa = "1.0.11"
 
 effie-macros = { version = "0.1.0", path = "../effie-macros" }
