--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,3 @@
-[workspace]
-members = ["effie", "effie-macros"]
-
 [package]
 name = "bread"
 version = "0.1.0"
@@ -12,7 +9,7 @@ readme = "README.md"
 publish = false
 
 [dependencies]
-effie = { version = "0.1.0", path = "effie" }
+effie = "0.0.1"
 itoa = "1.0.11"
 linux-raw-sys = { git = "https://github.com/morr0ne/linux-raw-sys.git", branch = "feature/arm-image-header", version = "0.6.4", default-features = false, features = [
     "no_std",
@@ -24,3 +21,6 @@ linux-raw-sys = { git = "https://github.com/morr0ne/linux-raw-sys.git", branch =
 lto = true
 codegen-units = 1
 strip = true
+
+[patch.crates-io]
+# effie = { path = "../effie" }
